--- a/templates/emails/successful_registration.html
+++ b/templates/emails/successful_registration.html
@@ -1,7 +1,12 @@
-Dear {{ first_name }},
+Dear {{ first_name }},<br>
 <br>
-your registration to the Strong LEns Database (SLED) website and API was successful.
-You can access your user profile here: <a href="{{ protocol }}://{{ domain }}{{ user_url }}">{{ username }}</a>
-We hope this resource will facilitate your research work.
+your registration to the Strong LEns Database (SLED) website and API was successful!<br>
+Here is the response from the administrators:<br>
+<br>
+"{{ response }}"<br>
+<br>
+You can access your user profile here: <a href="{{ protocol }}://{{ domain }}{{ user_url }}">{{ username }}</a>.<br>
+We hope this resource will facilitate your research work.<br>
+You can also consider <a href="https://join.slack.com/t/sled/shared_invite/zt-2u9apdo8z-UaBySTl2dM0MCMjN3brDRg">joining the SLED Slack workspace</a>.<br>
 <br>
 {% include "emails/signature.html" %}
