--- a/sled_users/templates/sled_users/user_index.html
+++ b/sled_users/templates/sled_users/user_index.html
@@ -297,9 +297,9 @@
 
 
     <div class="c c-user">
-      <input class="accordion-checkbox" type="checkbox" id="faq-1">
+      <input class="accordion-checkbox" type="checkbox" id="papers">
       <h1 class="jb-heading-2">
-	<label for="faq-1">
+	<label for="papers">
 	  My Papers ({{N_papers}})
 	</label>
       </h1>
