Fixed some links in the guide and howto.

--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -92,6 +92,7 @@
 	    <td><a href="{% url 'sled_users:user-query' %}">Users</a></td>
 	    <td><a href="{% url 'sled_groups:group-list' %}">Groups</a></td>
 	    <td><a href="{% url 'sled_guide:sled-guide' %}">Guide</a></td>
+	    <td><a href="{% url 'sled_howto:sled-howto' %}">FAQ</a></td>
 	    {% if user.is_authenticated %}
 	    <td>
 	      <a href="{% url 'sled_users:user-profile' %}">{{ user.username }}</a>
