--- a/sled_howto/templates/sled_howto/howto.html
+++ b/sled_howto/templates/sled_howto/howto.html
@@ -64,7 +64,7 @@
       <input class="accordion-checkbox" type="checkbox" id="faq-2">
       <h1 class="jb-heading-2">
 	<label for="faq-2">
-	  How to make a simple RA,DEC &nbsp;<b>query</b>&nbsp;?
+	  How to make a simple RA,DEC &nbsp;<b>query</b>&nbsp;? - coming soon
 	</label>
       </h1>
       <div class="p">
@@ -76,7 +76,7 @@
       <input class="accordion-checkbox" type="checkbox" id="faq-3">
       <h1 class="jb-heading-2">
 	<label for="faq-3">
-	  How to &nbsp;<b>query</b>&nbsp; the database using all its advanced features?
+	  How to &nbsp;<b>query</b>&nbsp; the database using all its advanced features? - coming soon
 	</label>
       </h1>
       <div class="p">
@@ -89,7 +89,7 @@
       <input class="accordion-checkbox" type="checkbox" id="faq-12">
       <h1 class="jb-heading-2">
 	<label for="faq-12">
-	  Can I run &nbsp;<b>massive queries</b>&nbsp; involving the entire database?
+	  Can I run &nbsp;<b>massive queries</b>&nbsp; involving the entire database? - coming soon
 	</label>
       </h1>
       <div class="p">
@@ -153,7 +153,7 @@
 	<p>
 	  <ul>
 	    <li>
-	      <b>What's next?</b> - Upon successful upload, the new lenses will appear in your <a href="{% url 'sled_users:user-profile' %}">user profile</a>.
+	      <b>What's next?</b> - Upon successful upload, the new lenses will appear in your <a href="{% url 'sled_users:user-profile' %}#lenses">user profile</a>.
 	      You will be the owner of these lenses and responsible for keeping them up-to-date.
 	    </li>
 	    <li>
@@ -198,7 +198,7 @@
 	  The recommended approach is to upload data as private (PRI) and then make them public at a later time once any mistakes will have been spotted and fixed.
 	</p>
 	<p>
-	  <u><b>NOTE:</b> SLED automatically fetches some data for newly injected lenses as described in the <a href="{% url 'sled_guide:sled-guide' %}">guide</a>.</u>
+	  <u><b>NOTE:</b> SLED automatically fetches some data for newly injected lenses as described in the <a href="{% url 'sled_guide:sled-guide' %}#auto-fetching-data">guide</a>.</u>
 	</p>
 
 
@@ -269,14 +269,14 @@
 	
 	<h2>Preparation</h2>
 	<p>
-	  You will need a <b>SLED user account</b>, the <a href="https://en.wikipedia.org/wiki/Bibcode">bibcode</a> of the paper (e.g. from ADS), the lenses that are part of the paper, e.g. getting their <b>RA and DEC</b> from exporting an existing collection, and the association of each lens to a paper through 3 possible flags: <b>discovery</b>, <b>classification</b>, and <b>model</b>.
+	  You will need a <b>SLED user account</b>, the <a href="https://en.wikipedia.org/wiki/Bibcode" target="_blank">bibcode</a> of the paper (e.g. from ADS), the lenses that are part of the paper, e.g. getting their <b>RA and DEC</b> from exporting an existing collection, and the association of each lens to a paper through 3 possible flags: <b>discovery</b>, <b>classification</b>, and <b>model</b>.
 	  All the lenses will need to be already injected in SLED and made <b>public</b> - no private lenses can be associated with papers.	      
 	</p>
 		
 	<h2>Adding a paper</h2>
 	<p>
 	  Papers can be added only through the API - there is no associated web interface for that.
-	  <a href="https://github.com/gvernard/SLED_api/blob/master/examples/howto_create_paper.ipynb">This script</a> allows for uploading a paper to SLED and it will report any conflicts, such as non-matching coordinates, existing paper, etc, that need to be resolved before uploading.
+	  <a href="https://github.com/gvernard/SLED_api/blob/master/examples/howto_create_paper.ipynb" target="_blank">This script</a> allows for uploading a paper to SLED and it will report any conflicts, such as non-matching coordinates, existing paper, etc, that need to be resolved before uploading.
 	  SLED retrieves information about the paper (e.g. authors, year, etc) automatically from ADS based on the provided bibcode.
 	</p>
 
@@ -356,7 +356,7 @@
       <input class="accordion-checkbox" type="checkbox" id="faq-4">
       <h1 class="jb-heading-2">
 	<label for="faq-4">
-	  How to &nbsp;<b>update</b>&nbsp; lenses?
+	  How to &nbsp;<b>update</b>&nbsp; lenses? - coming soon
 	</label>
       </h1>
       <div class="p">
@@ -370,7 +370,7 @@
       <input class="accordion-checkbox" type="checkbox" id="faq-5">
       <h1 class="jb-heading-2">
 	<label for="faq-5">
-	  How to &nbsp;<b>update</b>&nbsp; data?
+	  How to &nbsp;<b>update</b>&nbsp; data? - coming soon
 	</label>
       </h1>
       <div class="p">
@@ -383,7 +383,7 @@
       <input class="accordion-checkbox" type="checkbox" id="faq-9">
       <h1 class="jb-heading-2">
 	<label for="faq-9">
-	  How to &nbsp;<b>update</b>&nbsp; a paper?
+	  How to &nbsp;<b>update</b>&nbsp; a paper? - coming soon
 	</label>
       </h1>
       <div class="p">
@@ -397,7 +397,7 @@
       <input class="accordion-checkbox" type="checkbox" id="faq-10">
       <h1 class="jb-heading-2">
 	<label for="faq-10">
-	  Is &nbsp;<b>deleting</b>&nbsp; lenses, data, and anything else possible?
+	  Is &nbsp;<b>deleting</b>&nbsp; lenses, data, and anything else possible? - coming soon
 	</label>
       </h1>
       <div class="p">
@@ -410,7 +410,7 @@
       <input class="accordion-checkbox" type="checkbox" id="faq-8">
       <h1 class="jb-heading-2">
 	<label for="faq-8">
-	  What about actual &nbsp;<b>scientific data</b>?
+	  What about actual &nbsp;<b>scientific data</b>? - coming soon
 	</label>
       </h1>
       <div class="p">
